--- a/mstep-DYN304AzureSBListenerApp/mstep-DYN304AzureSBListenerApp.csproj
+++ b/mstep-DYN304AzureSBListenerApp/mstep-DYN304AzureSBListenerApp.csproj
@@ -106,6 +106,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="画面キャプチャ\ImagesDemo2_1.png" />
+    <None Include="画面キャプチャ\ImagesDemo2_2.png" />
+    <None Include="画面キャプチャ\ImagesDemo2_3.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
